kubernetes/three-tier-app/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 5678

  type: ClusterIP
